added paragraph and styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
+    <head>
+        <style>
+            p{
+                font:100%/1.5 sans-serif;
+                max-width: 33em;
+            }
+
+
+        </style>
+    </head>
     <body>
-        ihwefosdcbzibb nisichisnc ipschishochsa ncnsiacihiphcno kasncinkcsn oaschcnsnkanc oascjonn.ogboubbb iokjjbibigb ihi 0h 9h9 99u9 n88yhhin ihiihhin.
+       <p> ihwefosdcbzibb nisichisnc ipschishochsa ncnsiacihiphcno kasncinkcsn oaschcnsnkanc oascjonn.ogboubbb iokjjbibigb ihi 0h 9h9 99u9 n88yhhin ihiihhin.</p>
     </body>
 </html>
